# libratss

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bitsize.cpp  paper.cpp  paper_table.cpp
cmake/: FindCGALSimple.cmake  FindLIBGMPXX.cmake  FindLIBMPFR.cmake  add_buildtype_lto.cmake  add_buildtype_lto_sanitize.cmake
common/: CMakeLists.txt  generators.cpp  generators.h  points.cpp  points.h  stats.cpp  stats.h  types.h
include/libratss/: Calc.h  Conversion.h  GeoCalc.h  GeoCoord.h  Precision.h  ProjectS2.h  ProjectSN.h  Projector.h  ReferenceWrapper.h  SimApxBruteForce.h  SimApxLLL.h  SphericalCoord.h  constants.h  debug.h  enum.h  mpreal.h  types.h
include/libratss/CGAL/: Conversion.h  ExtendedInt64Cartesian.h  ExtendedInt64FilteredCartesian.h  ExtendedInt64Pq.h  ExtendedInt64_arithemtic_kernel.h  ExtendedInt64q.h  ExtendedInt64z.h  ExtendedInt64zTraits.h  ExtendedInt64z_old.h  boost_int1024q_traits.h
include/libratss/core2/: Conversion.h
include/libratss/internal/: Matrix.h  ReferenceWrapper.h  SkipIterator.h
include/libratss/util/: BasicCmdLineOptions.h  InputOutput.h  InputOutputPoints.h  Readers.h
scripts/: bench_paper.sh
src/: Calc.cpp  Conversion.cpp  GeoCalc.cpp  GeoCoord.cpp  ProjectS2.cpp  ProjectSN.cpp  Projector.cpp  SimApxBruteForce.cpp  SimApxLLL.cpp  SphericalCoord.cpp  debug.cpp
src/CGAL/: Conversion.cpp  ExtendedInt64Pq.cpp  ExtendedInt64q.cpp  ExtendedInt64z.cpp  ExtendedInt64zTraits.cpp  boost_int1024q_traits.cpp
src/core2/: Conversion.cpp
src/util/: BasicCmdLineOptions.cpp  InputOutput.cpp  InputOutputPoints.cpp  Readers.cpp
tests/: CMakeLists.txt  TestBase.cpp  TestBase.h  calc.cpp  compilation.cpp  nd_projection.cpp  projection.cpp
tools/: CMakeLists.txt  proj.cpp  ratapx.cpp  rndpoints.cpp  snap_poles.cpp  types.cpp  types.h
